# raudio

./: .gitignore  CONTRIBUTORS  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  jest.config.js  job-reader.js  modulations.md  normalize_samples.sh  optimization_epic.md  package-lock.json  package.json  realtime_midi.md  rustfmt.toml  test-score.json  test-tin-pan-score.json  trim_samples.sh  tsconfig-runner.json  tsconfig.json  webpack.config.js  webpack.runner.config.js
demo/: playlistsMetadata.json
demo/evocative/: playlistMetadata.json
demo/groovy/: playlistMetadata.json
demo/spacey/: playlistMetadata.json
deploy/: get-stuff  login-stage  stage-wendy
prisma/: schema.prisma
projects-todo/: effects.md  optimization_epic.md
projects-todo/reverb/: README.md
scripts/: normalize_samples.sh  relocate_samples.sh  trim_samples.sh
server/: api.types.ts  checks.ts  conf.ts  facts.ts  index.ts  job-reader.ts  log.ts  nrt.sc  sc-task.ts  types.ts
server/web/: quantization.ts  types.ts
src/: arg_parse.rs  canvas.rs  color.rs  convolve.rs  decor.rs  engrave.rs  envelope.rs  fastmast.rs  files.rs  freq_forms.rs  gen.rs  lib.rs  main.rs  midi.rs  mix.rs  modulate.rs  monic_theory.rs  pan.rs  phrase.rs  preset.rs  render.rs  reverb.rs  rubberband.rs  sequence.rs  song.rs  synth.rs  synth_config.rs  time.rs  time_forms.rs  types.rs  wavelets.rs
src/analysis/: delay.rs  eng.rs  freq.rs  melody.rs  (+12 more)
test/: e2e.performance.test.js  playbook-melodic.json
tests/: common.rs  test_freq_domain.rs  test_optimized_time.rs  test_sequencer.rs  test_time_domain.rs
(+218 files in other folders)
