[package]
name = "wendy"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
rand = "0.8.3"
num-complex = "0.4.4"
itertools = "0.12.0"
image = "0.24.8"
rusttype = "0.9.3"
clap = "3.0"
once_cell = "1.8.0"

[lib]
name = "wendy"
path = "src/lib.rs"

[[bin]]
name = "make-wavelets"
path = "src/main.rs"