[package]
name = "raudio"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 

[dependencies]
hound = "3.5.1"
rand = "0.8.3"
rustfft = "6.2.0"
serde = { version = "1.0.194",features = ["derive"] }
serde_json = "1.0.115"
rayon = "1.7"
sysinfo = "0.32.0"
dotenv = "0.15.0"
rubato = "0.16.1"
fs = "0.0.5"
once_cell = "1.20.2"

[[bin]]
name = "raudio"
path = "src/main.rs"
